WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
253044
CRASH: GPUP at -[WebCoreNSURLSessionDataTask _cancel]
https://bugs.webkit.org/show_bug.cgi?id=253044
Summary
CRASH: GPUP at -[WebCoreNSURLSessionDataTask _cancel]
Jer Noble
Reported
2023-02-27 17:33:47 PST
CRASH: GPUP at -[WebCoreNSURLSessionDataTask _cancel]
Attachments
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2023-02-27 17:34:02 PST
rdar://94878533
Jer Noble
Comment 2
2023-02-27 17:44:49 PST
Pull request:
https://github.com/WebKit/WebKit/pull/10769
EWS
Comment 3
2023-02-28 07:35:36 PST
Committed
260941@main
(96230945f879): <
https://commits.webkit.org/260941@main
> Reviewed commits have been landed. Closing PR #10769 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug